@@ -7,6 +7,8 @@ version 0.49:
 	* Updated Korean translation (thanks Ho-seok Lee, also for
 	  resized ICQ icons)
 	* Updated Dutch translation (thanks Floris Eshuis)
+	* Yahoo updates (thanks Brian Macke)
+	* Jabber updates
 	* Zephyr updates (thanks Arun A Tharuvai)
 	* Gadu-Gadu updates (thanks Arkadiusz Miskiewicz)
 	* Option to show aliases in conversation tabs
